[project]
name = "semanticsearch"
version = "0.1.0"
description = ""
authors = [
    {name = "alexanderkjackson",email = "alexanderkjackson@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.84.0,<2.0.0)",
    "pymilvus (>=2.5.10,<3.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "pymupdf (>=1.26.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
